# Prometheus

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  run_evolution.sh
.sisyphus/: ralph-loop.local.md
agent_lib/: __init__.py  ast_tools.py  diff.py  file_index.py  pyproject.toml  search.py  test_parse.py
examples/evolved_agent/: Dockerfile  README.md  lineage.json  pyproject.toml
examples/evolved_agent/src/agent/: agent.py  cli.py  context.py  planner.py  tools.py
examples/example_run/: README.md  checkpoint_gen0000.json  checkpoint_gen0002.json  config.json  events.jsonl
examples/example_run/best_agent/: Dockerfile
reference/: AGENTS.md
reference/openharness/: AGENTS.md
reference/openharness/swarm/: AGENTS.md
reference/openharness/tools/: AGENTS.md
src/openharness_evolve/: __main__.py  cli.py
src/openharness_evolve/analysis/: compare.py
src/openharness_evolve/config/: schema_validator.py
src/openharness_evolve/eval/: query_runner.py  runner.py  sandbox.py  scorer.py
src/openharness_evolve/evolution/: history.py  (+4 more)
src/prometheus/: AGENTS.md  __main__.py  api_clients.py  cli.py
tests/test_evolve/: conftest.py  test_cli.py  test_compare.py  test_composite_tools.py  test_e2e.py  test_eval_pipeline.py  test_eval_tasks.py  test_evolution_loop.py  test_experiment_logger.py  test_harness_config.py  test_mutator.py  test_selector_and_history.py  test_task_and_scorer.py
tests/test_prometheus/: AGENTS.md  conftest.py  test_benchmarks.py  test_cli.py  test_code_evolution.py  test_compare.py  test_composite_tools.py  test_e2e.py  test_eval_pipeline.py  test_eval_tasks.py  test_evolution_loop.py  test_experiment_logger.py  test_harness_config.py  test_isolation.py  test_mutator.py  test_selector_and_history.py  test_task_and_scorer.py
(+48 files in other folders)
