[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolved-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "typer>=0.12.0",
]

[project.scripts]
agent = "agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
